2011-03-14  Paul Eggert  <eggert@cs.ucla.edu>

	* buffer.c (switch_to_buffer_1): Now static.
	(Fkill_buffer, record_buffer, Fbury_buffer, Fset_buffer_multibyte):
	(report_overlay_modification): Rename locals to avoid shadowing.

	* sysdep.c (system_process_attributes): Rename vars to avoid shadowing.
	Fix pointer signedness issue.
	(sys_subshell): Mark local as volatile if checking for lint,
	to suppress a gcc -Wclobbered warning that does not seem to be right.
	(MAXPATHLEN): Define only if needed.

	* process.c (serial_open, serial_configure): Move decls from here ...
	* systty.h: ... to here, so that they can be checked.

	* fns.c (get_random, seed_random): Move extern decls from here ...
	* lisp.h: ... to here, so that they can be checked.

	* sysdep.c (reset_io): Now static.
	(wait_for_termination_signal): Remove; unused.

	* keymap.c (keymap_parent, keymap_memberp, map_keymap_internal):
	(copy_keymap_item, append_key, push_text_char_description):
	Now static.
	(Fwhere_is_internal): Don't test CONSP (sequences) unnecessarily.
	(DENSE_TABLE_SIZE): Remove; unused.
	(get_keymap, access_keymap, Fdefine_key, Fwhere_is_internal):
	(describe_map_tree):
	Rename locals to avoid shadowing.

	* keyboard.c: Declare functions static if they are not used elsewhere.
	(echo_char, echo_dash, cmd_error, top_level_2):
	(poll_for_input, handle_async_input): Now static.
	(read_char, kbd_buffer_get_event, make_lispy_position):
	(make_lispy_event, make_lispy_movement, apply_modifiers):
	(decode_keyboard_code, tty_read_avail_input, menu_bar_items):
	(parse_tool_bar_item, read_key_sequence, Fread_key_sequence):
	(Fread_key_sequence_vector): Rename locals to avoid shadowing.
	(read_key_sequence, read_char): Mark locals as initialized.
	(Fexit_recursive_edit, Fabort_recursive_edit): Mark with NO_RETURN.

	* keyboard.h (make_ctrl_char): New decl.
	(mark_kboards): Move decl here ...
	* alloc.c (mark_kboards): ... from here.

	* lisp.h (force_auto_save_soon): New decl.
